# ift611_tp

./: .gitignore  README.md
bd/: README.md  bd.cql  docker-compose.yml  install.bat  run.bat
client/: .gitignore  README.md  index.js  package-lock.json  package.json  webpack.main.config.js  webpack.rules.js
client/src/: index.html  index.scss  index.ts  renderer.ts
client/src/modules/: index.ts
client/src/modules/auth/: auth.html  auth.ts
client/src/modules/chat/: chat.html  chat.ts
client/src/modules/loading/: loading.ts
client/src/modules/message/: message.html  message.ts  messagePerf.ts
client/src/modules/text-area/: text-area.html  text-area.ts
client/src/modules/users/: users.html  users.ts
client/src/modules/websocket/: websocket-client.ts
client/src/modules/writing/: writing.html  writing.ts
database/: README.md  bd.cql
npm-server/: README.md  package-lock.json  package.json  tsconfig.json
npm-server/src/: index.ts
npm-server/src/client/: client.ts
npm-server/src/db/: client.ts  query.ts
npm-server/src/util/: console.ts
npm-server/src/ws/: broadcast.ts  index.ts  server.ts  types.ts
npm-server/src/ws/client/: close.ts  communication.ts  connection.ts  index.ts  message.ts
npm-server/src/ws/user/: close.ts  connection.ts  index.ts  message.ts  utils.ts
server/: CMakeLists.txt  README.md  main.cpp
server/server/: CMakeLists.txt  server.cpp  something.cpp  something.h
